﻿25.9.4.1
========
 + Apply XInput deadzone to XInputGetStateEx (...) function for engines
     using SDL or Unity, since they do not use the documented XInput API...

25.9.4
======
 + Fixed change made in 25.3.5.1 to address REFramework DirectInput8 input
     issues, that was affecting non-CRAPCOM games (i.e. Hollow Knight).

25.9.3.2
========
 + Apply the "NoDrawOverlay" option in [Steam.System] to all platform
     overlays (except Game Bar).

25.9.3.1
========
 + Removed mode option from DLSS Frame Generation "Native Pacing".

25.9.3
======
 + Add the GOG Galaxy overlay back to the internal blacklist in OpenGL.
 + Allow various DLSS Frame Generation settings to be configured when
     DLSS Frame Generation is active but not DLSS Super Resolution.

25.9.2
======
 + Slightly reduced render latency in VRR Optimized mode in D3D11 games,
     by ensuring all commands before SK draws its overlay are flushed in
       advance, and then again after SK draws its overlay before any
         third-party overlays draw theirs.

25.8.31
=======
 + Ignore Keyboard/Mouse Hooks installed by the GOG overlay.
 + Enumerate HID device files that SK's CreateFile{A|W} hooks miss after
     15 drawn frames instead of during initialization.
 + Apply platform detection to Local Injection also...

25.8.30.3
=========
 + Make the Ctrl+Shift+Backspace keybinding for toggling SK's Control Panel
     a standard configurable keybinding.

   * The binding can be edited under Input Management | Keyboard.

25.8.30.2
=========
 + Query the NVIDIA driver setting for ReBar before installing NvAPI hooks,
     to prevent rare race conditions in 32-bit application init.

25.8.30.1
=========
 + Improved Ubisoft+ and Steam platform identification.
 + Improved GOG platform detection in Unreal Engine games.

25.8.30
=======
 + Handle Steam AppId lookup for games with Unicode characters in their name.
 + Remove Trademark symbols before performing Steam AppId lookup.

25.8.29
=======